--- a/Restomenu.css
+++ b/Restomenu.css
@@ -2,9 +2,11 @@
     max-width: 1100px;
     margin: auto;
 }
-.menudata .menu_head{
-font-size: x-large;
+
+.menudata .menu_head {
+    font-size: x-large;
 }
+
 .menudata .menulist .menulist_img {
     max-height: 200px;
     /* max-width: 250px; */
@@ -15,13 +17,16 @@ font-size: x-large;
     width: 100%;
     padding: 8px;
 }
-.menudata .menulist{
+
+.menudata .menulist {
 
     margin: 1em 4px;
 }
-.menudata{
+
+.menudata {
     margin: 1em 0;
 }
+
 .menudata .restoall {
     flex-wrap: wrap;
     justify-content: space-evenly;
@@ -31,29 +36,33 @@ font-size: x-large;
 
 .menudata .menudatalist .menulist {
     max-width: 270px;
-    transition: transform 300ms ease ;
+    transition: transform 300ms ease;
     box-shadow: rgba(0, 0, 0, 0.093) 0px 0px 10px 0px;
-    
+
 }
-.menudata .menudatalist .menulist:hover{
+
+.menudata .menudatalist .menulist:hover {
     transform: scale(1.04);
 
 }
-.menudata .menudatalist .menulist .menulist_content .menulist_tittle{
+
+.menudata .menudatalist .menulist .menulist_content .menulist_tittle {
     font-size: 0.9rem;
-font-weight: 600;
-color: rgb(51, 51, 51);
-line-height: normal;
-display: -webkit-box;
-overflow: hidden;
--webkit-line-clamp: 2;
-/* -moz-box-orient: vertical; */
-/* min-height: 42px; */
+    font-weight: 600;
+    color: rgb(51, 51, 51);
+    line-height: normal;
+    display: -webkit-box;
+    overflow: hidden;
+    -webkit-line-clamp: 2;
+    /* -moz-box-orient: vertical; */
+    /* min-height: 42px; */
 }
-.menudatalist .menulist .menulist_content{
+
+.menudatalist .menulist .menulist_content {
     margin: 8px;
 }
-.menulist_disc{
+
+.menulist_disc {
     color: rgb(130, 130, 130);
     font-size: 14px;
     margin: 0.8rem 0px;
@@ -65,28 +74,99 @@ overflow: hidden;
     min-height: 36px;
     letter-spacing: 0.01em;
 }
-.menuprice{
+
+.menuprice {
     font-size: 20px;
-color: rgb(0, 0, 0);
-font-weight: 600;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
 }
-.menudata .menudatalist .menulist .menulist_content button{
+
+.menudata .menudatalist .menulist .menulist_content button {
     position: relative;
-border: 1px solid rgb(73, 69, 190);
-box-shadow: none;
-font-weight: 600;
-border-radius: 4px;
-text-align: center;
-text-transform: capitalize;
-flex-shrink: 0;
-color: rgb(73, 69, 190);
-padding: 12px 30px 10px;
--moz-box-align: center !important;
-align-items: center !important;
+    border: 1px solid rgb(73, 69, 190);
+    box-shadow: none;
+    font-weight: 600;
+    border-radius: 4px;
+    text-align: center;
+    text-transform: capitalize;
+    flex-shrink: 0;
+    color: rgb(73, 69, 190);
+    padding: 12px 30px 10px;
+    -moz-box-align: center !important;
+    align-items: center !important;
 }
-.menudatalist .menulist .menuflex{
+
+.menudatalist .menulist .menuflex {
     display: flex;
-justify-content: space-between;
-align-items: center;
-padding-bottom: 10px;
+    justify-content: space-between;
+    align-items: center;
+    padding-bottom: 10px;
+}
+
+
+/* =============================== menu list Header */
+.restohead {
+    background-image: url("https://product-assets.faasos.io/production/product/banner_image_es_1658739138126_Chicken%20Tikka%20Biryani%20%281%29.jpg");
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: 150px 0px;
+    z-index: 1;
+
+    padding: 3rem;
+    margin-bottom: 3rem;
+    /* height: 400px; */
+    position: relative;
+}
+
+.restohead .backgrnd {
+    background: linear-gradient(to right, rgb(0, 0, 0) 0%, rgb(0, 0, 0) 57%, rgba(0, 0, 0, 0.1) 100%);
+    width: 100%;
+    height: 100%;
+    top: 0px;
+    left: 0px;
+    position: absolute;
+}
+
+.restohead .menu_maxwidth {
+    margin: 0px auto;
+    z-index: 1;
+    position: relative;
+    max-width: 1170px;
+}
+
+.restohead .menu_maxwidth .menuheader {
+    align-items: center;
+    flex-wrap: wrap;
+    display: flex;
+}
+
+.restohead .menu_maxwidth .menuheader .menu_img img {
+    width: 330px;
+    height: 318px;
+    object-fit: cover;
+}
+
+.restohead .menuheader .menuhead_content {
+    color: aliceblue;
+    margin: 20px;
+}
+
+.restohead .menuheader .menuhead_content img {
+    width: 99px;
+    border-radius: 1em;
+    padding: 10px;
+}
+
+.style_CouponCard {
+
+    cursor: pointer;
+    color: rgb(51, 51, 51);
+    padding: 0.5rem 0.7rem;
+    font-weight: 790;
+font-size: 0.9rem;
+    border-radius: 0.4rem;
+    background-color: rgb(206, 236, 252);
+    text-align: center;
+    margin: 1em 0;
+
 }
