--- a/mediabox.css
+++ b/mediabox.css
@@ -48,17 +48,21 @@
 .sreachinput button {
     padding: 0.61em 2.7em;
     margin: 0 20px;
-    background-color: rgba(78, 44, 113, 0.852);
-    color: white;
-    border-radius: 10px;
-    border: none;
+    box-shadow: none;
+    text-align: center;
+    text-transform: capitalize;
+    color: #4945be;
+    border: 1px solid #4945be;
+    border-radius: 4px;
+    flex-shrink: 0;
+    padding: 12px 30px 10px;
+    font-weight: 600;
     cursor: pointer;
 }
 
 @media (max-width:750px) {
     .navbar .navlist {
         background-color: #f5f5f5;
-        ;
         position: absolute;
         top: 3.5em;
         left: 0em;
@@ -93,7 +97,7 @@
     .sreachinput {
         display: flex;
         justify-content: center;
-      }
+    }
 
     .sreachinput input {
         padding: 0 0.7em;
