--- a/index.css
+++ b/index.css
@@ -34,8 +34,16 @@
 .navbar .navlist ul li {
     padding: 2px 15px;
     color: rgb(72, 72, 72);
+    display: inline-grid;
+    cursor: pointer;
 }
-
+.navbar .navlist ul li .svg-inline--fa{
+    margin: 5px 10px;
+    }
+    .navbar .navlist ul li:hover{
+        color: rgba(74, 30, 177, 0.923);
+        border-bottom: solid 1px;
+    }
 .navbar .menu h1 {
     cursor: pointer;
 }
