--- a/index.css
+++ b/index.css
@@ -44,13 +44,16 @@
 
 .navbar .navlist ul li:hover {
     color: rgba(74, 30, 177, 0.923);
-    border-bottom: solid 1px;
 }
 
 .navbar .menu h2 {
     cursor: pointer;
 }
-
+.vertical {
+    border-left: 1px solid rgb(185, 185, 185);
+    height: min-content;
+    border-bottom: none;
+}
 .banners {
     max-width: 1200px;
     margin: auto;
