--- a/index.css
+++ b/index.css
@@ -5,6 +5,8 @@
     margin: 0;
     font-family: 'Work Sans', sans-serif;
     box-sizing: border-box;
+    list-style: none;
+    text-decoration: none;
 }
 
 .navbar {
@@ -27,8 +29,11 @@
 }
 
 .navbar .navlist ul {
-    list-style-type: none;
     display: flex;
+}
+.navbar .navlist ul Link{
+    list-style-type: none;
+    text-decoration: none;
 }
 
 .navbar .navlist ul li {
@@ -43,7 +48,7 @@
 }
 
 .navbar .navlist ul li:hover {
-    color: rgba(74, 30, 177, 0.923);
+    color: rgba(74, 30, 177, 0.747);
 }
 
 .navbar .menu h2 {
@@ -57,6 +62,8 @@
 .banners {
     max-width: 1200px;
     margin: auto;
+    display: flex;
+    align-items: center;
 }
 
 .banners img {
