api server updated

--- a/index.css
+++ b/index.css
@@ -17,11 +17,18 @@
     padding: 10px 0;
 }
 
-.navigation {
+/* .navigation {
     background-color: #e3e3e35d;
     box-shadow: rgba(0, 0, 0, 0.1) 0px 20px 25px -5px, rgba(0, 0, 0, 0.04) 0px 5px 5px -5px;
-}
+} */
 
+.navigation {
+    background-color: white;
+    box-shadow: 0 20px 25px -5px #0000001a, 0 5px 5px -5px #0000000a;
+    position: sticky;
+    z-index: 10;
+    top: 0;
+  }
 
 .navbar>h1 {
     padding: 20px 45px;
@@ -258,4 +265,8 @@ color: lightslategray;
 }
 .cart h4{
     font-size: xxx-large;
+}
+.logo{
+    align-self: center;
+    font-weight: 800;
 }
